[package]
name = "rs-script"
version = "0.2.14"
edition = "2024"
authors = ["Robert Lucas <100799838+Robert-M-Lucas@users.noreply.github.com>"]
description = "A tool to create Rust scripts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Robert-M-Lucas/rss2"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-print = "0.3.7"
derive-getters = "0.5.0"
directories = "6.0.0"
human_bytes = "0.4.3"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tui-markdown = "0.3.3"
walkdir = "2.5.0"
zip = "2.6.1"

[build-dependencies]
build-target = "0.4.0"

[[bin]]
name = "rss"
path = "src/main.rs"
