[package]
name = "rs-script"
version = "0.2.18"
edition = "2024"
authors = ["Robert Lucas <100799838+Robert-M-Lucas@users.noreply.github.com>"]
description = "A tool to create and edit single-file Rust scripts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Robert-M-Lucas/rss2"
default-run = "rss"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-print = "0.3.7"
const-it = "0.2.0"
derive-getters = "0.5.0"
directories = "6.0.0"
either = "1.15.0"
human_bytes = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
static_assertions = "1.1.0"
tempfile = "3.19.1"
walkdir = "2.5.0"
zip = "2.6.1"

[build-dependencies]
build-target = "0.4.0"

[[bin]]
name = "rss"
path = "src/main.rs"

[[bin]]
name = "rs-script"
path = "src/main.rs"
