[package]
name = "rs-script"
version = "0.3.7"
edition = "2024"
authors = ["Robert Lucas <100799838+Robert-M-Lucas@users.noreply.github.com>"]
description = "A tool to create and edit single-file Rust scripts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Robert-M-Lucas/rss2"
default-run = "rss"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-print = "0.3.7"
colored_json = "5.0.0"
const-it = "0.2.0"
ctrlc = "3.5.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
directories = "6.0.0"
either = "1.15.0"
human_bytes = "0.4.3"
libc = "0.2.177"
num-format = "0.4.4"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
static_assertions = "1.1.0"
tempfile = "3.23.0"
walkdir = "2.5.0"
zip = "5.1.1"

[build-dependencies]
build-target = "0.4.0"

[[bin]]
name = "rss"
path = "src/main.rs"

[[bin]]
name = "rs-script"
path = "src/main.rs"

[[bin]]
name = "rss-run"
path = "src/rss_run.rs"
